// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree if description is set 1`] = `
{
  "description": "Some description",
  "expanded": true,
  "focused": true,
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct accessibility tree if open/closed: After click 1`] = `
{
  "expanded": true,
  "focused": true,
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct accessibility tree if open/closed: Initially 1`] = `
{
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct accessibility tree if rendered with optgroups in open state 1`] = `
{
  "children": [
    {
      "expanded": true,
      "focused": true,
      "haspopup": "listbox",
      "name": "Option A, Some label",
      "role": "combobox",
    },
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "children": [
            {
              "name": "Some optgroup label 1",
              "role": "StaticText",
            },
            {
              "children": [
                {
                  "name": "Option A",
                  "role": "StaticText",
                },
                {
                  "children": [
                    {
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "name": "Option A",
              "role": "option",
              "selected": true,
            },
            {
              "children": [
                {
                  "name": "Option B",
                  "role": "StaticText",
                },
              ],
              "name": "Option B",
              "role": "option",
            },
            {
              "name": "Some optgroup label 1",
              "role": "StaticText",
            },
            {
              "children": [
                {
                  "name": "Option A",
                  "role": "StaticText",
                },
              ],
              "name": "Option A",
              "role": "option",
            },
            {
              "children": [
                {
                  "name": "Option B",
                  "role": "StaticText",
                },
              ],
              "name": "Option B",
              "role": "option",
            },
          ],
          "name": "Some label",
          "orientation": "vertical",
          "role": "listbox",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "generic",
}
`;

exports[`accessibility should expose correct accessibility tree in error state 1`] = `
{
  "expanded": true,
  "focused": true,
  "haspopup": "listbox",
  "name": "Option A, Some label. Some error message",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct accessibility tree on selected custom option on click in open state: Initially option A 1`] = `
{
  "children": [
    {
      "name": "Option A",
      "role": "StaticText",
    },
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "Option A",
  "role": "option",
  "selected": true,
}
`;

exports[`accessibility should expose correct accessibility tree on selected custom option on click in open state: Initially option B 1`] = `
{
  "children": [
    {
      "name": "Option B",
      "role": "StaticText",
    },
  ],
  "name": "Option B",
  "role": "option",
}
`;

exports[`accessibility should expose correct accessibility tree on selected custom option on click in open state: Option A after click 1`] = `
{
  "children": [
    {
      "name": "Option A",
      "role": "StaticText",
    },
  ],
  "name": "Option A",
  "role": "option",
}
`;

exports[`accessibility should expose correct accessibility tree on selected custom option on click in open state: Option B after click 1`] = `
{
  "children": [
    {
      "name": "Option B",
      "role": "StaticText",
    },
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "Option B",
  "role": "option",
  "selected": true,
}
`;

exports[`accessibility should expose correct initial accessibility tree 1`] = `
{
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct initial accessibility tree 2`] = `null`;

exports[`accessibility should expose correct initial accessibility tree in open state 1`] = `
{
  "expanded": true,
  "focused": true,
  "haspopup": "listbox",
  "name": "Option A, Some label",
  "role": "combobox",
}
`;

exports[`accessibility should expose correct initial accessibility tree in open state 2`] = `
{
  "children": [
    {
      "expanded": true,
      "focused": true,
      "haspopup": "listbox",
      "name": "Option A, Some label",
      "role": "combobox",
    },
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "name": "Option A",
                  "role": "StaticText",
                },
                {
                  "children": [
                    {
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "name": "Option A",
              "role": "option",
              "selected": true,
            },
            {
              "children": [
                {
                  "name": "Option B",
                  "role": "StaticText",
                },
              ],
              "disabled": true,
              "name": "Option B",
              "role": "option",
            },
            {
              "children": [
                {
                  "name": "Option C",
                  "role": "StaticText",
                },
              ],
              "name": "Option C",
              "role": "option",
            },
          ],
          "name": "Some label",
          "orientation": "vertical",
          "role": "listbox",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "generic",
}
`;
